--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
-name: Deploy Next.js (Static Export) to GitHub Pages
+name: Deploy to GitHub Pages
 
 on:
   push:
     branches:
-      - main  # เปลี่ยนชื่อ branch ถ้าคุณใช้ชื่ออื่น
+      - main  # หรือ branch ที่คุณใช้เป็นหลัก
 
 permissions:
   contents: read
@@ -14,7 +14,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Node.js
@@ -25,18 +25,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build Next.js static site
-        run: |
-          npm run build
+      - name: Build project
+        run: npm run build
 
-      # ✅ ย้ายไฟล์ทั้งหมดไปไว้ใน out/profile/
-      - name: Move build output into /profile
-        run: |
-          mkdir -p out/profile
-          shopt -s extglob
-          mv out/!(profile|data.sqlite|*.onnx) out/profile/ || true
-
-      # ✅ อัปโหลด artifact เพื่อ deploy
+      # 📁 จุดสำคัญ: กำหนดโฟลเดอร์ที่มีไฟล์ build แล้ว
+      # เช่น "dist" (Vite), "out" (Next.js export), หรือ "build" (CRA)
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
